--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "start": "tsc && vite start"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
