--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
