--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
