--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "vite preview --port $PORT --host 0.0.0.0"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
